styles/style.css
/* ... */
@media (max-width: 1358px) {
    .mainnav-logo{
        max-height: 5rem;
    }
    .hero{height: auto; margin-bottom: 5rem;}
    .hero-img{
        max-height: 30rem;}
    .hero-belowmain{margin-top: 3rem;}
    .hireMe > a{padding: 1rem 4rem;}
    .projgrid{
        grid-template-columns: 1fr 1fr;
    }
    .flexbox{flex-direction: column;align-items: center;}
    .projtext{font-size: 16px;}
    .projgridcontainer{
        margin: 2rem 8rem;
    }
    .projgrid{
        grid-template-columns: repeat(auto-fill, 30%);
    }
    button, .btnstyle{
        padding: .75rem 1.5rem;
    }
    /* .work-container-outer{max-width: 100%;}
    .work-textcontainer{text-align: center; padding-top: 0;margin-top: 1rem; min-width: 70vw; max-width: 90vw; position:inherit; border: none;} */
}

@media (max-width: 1280px) {
    .otherProjects{flex-direction: column; align-items: center;}
}

@media (max-width: 1100px) {
    .mainnav{
        justify-content: space-between;
    }
    .mainnav-directions{
        width: auto;
    }
    .hero{
        height: auto;
        margin-bottom: 8rem;
        border: none;
    }
    .hero-main{
        flex-direction: column;
        padding: 2rem;
        margin: auto 0;
    }
    
    .hero-textcontainer{
        text-align: center;
        max-width: 100%;
    }
    .hireMe{justify-content:center; align-items: center;}
    .hero-socialIcons{justify-content: center; margin: .25rem;}
    .projnav{
        margin: 0 1rem;
    }
    .projgridcontainer{
        margin: 2rem 2rem;
        box-shadow: none;
    }
    .hero-belowmain{margin-top: 0;}
    .hero-quoteTextContainer{ transform: none !important;}
    .container{flex-direction: column;}
    h2{text-align: center;}
    .container{box-shadow: none;}
    .scrollTextContainer{display: none;}
    .work-ImgContainer{width: 100%; border: none;}
    .work-img{
        max-width: 85vw;
        height: auto;
    }
    .work-container-inner{flex-direction: column-reverse; align-items: center;}
    .work-textcontainer{position:static;}
    .about-img{max-width:15rem; height: 100%;}
}

@media (max-width: 900px) {

    nav{
        flex-direction: column;
        align-items: center;
    }
    nav div{
        display:inline;
    }
    .mainnav{
        position: relative;
    }
    .mainnav-directions{
        width: 100%;
        display: flex;
        flex-direction: column;
    }
    .mainnav-directions > a{
        padding: .25rem 0;
    }

    .hero{margin: 0;}
    .hero-textTitle{font-size: 40px;}
    .hero-belowmain{display: none;}
    .hero-socialIcons{justify-content: center; padding: 1.5rem;}
    .hireMe > a{padding: 1rem 1rem;}
    .projgridcontainer{
        margin: 2rem 1rem;
        box-shadow: none;
        border-radius: .5rem;
    }
    .projgrid{
        grid-template-columns: repeat(auto-fill, 95%);
    }
    button, .btnstyle{
        width: 70vw;
        margin: .5rem 2rem;
        border-radius: .5rem;
    }
    footer{font-size: 20px;}
    .contact-container{margin: 2rem .5rem; box-shadow: none;max-width: 90%;text-align: center;}
    form{max-width: 88vw;}
    input{width: 90%; padding: 0rem;}
    form textarea{width: 90%; padding: 0;}
    .work-container-outer{max-width: 90vw; margin: 1rem; padding: .5rem;border-radius: .5rem;}
    .otherProjects{flex-direction: column;}
    .textcontainer{
        padding: 1rem 2rem;
    }
    .textcontainer h2{
        font-size: 32px;
        padding-top: 1rem;
    }
    .textcontainer a{
        padding-top: 0rem;
    }
    .textcontainer p{
        font-size: 18px;
    }
    form > button{
        width: 90%;
        padding: 1rem .5rem;
        margin: 1rem;
        text-align: start;
    }
    form > select{
        padding: .25rem;
    }
}

